--- a/src/templates/pages/leader-images.pug
+++ b/src/templates/pages/leader-images.pug
@@ -62,7 +62,7 @@ html(lang="en")
                                     img(src="assets/images/leader-images-icon.png", alt="", srcset="")  
                                     span Profile Pictures
                                 img(src="assets/images/chevron-right.png", alt="", srcset="")
-                            a.aside-link.d-flex.align-items-center.justify-content-between(href="")
+                            a.aside-link.d-flex.align-items-center.justify-content-between(href="confidence-score.html")
                                 .aside-link-content.d-flex.align-items-center.gap-2   
                                     img(src="assets/images/level.png", alt="", srcset="")  
                                     span Confidence Score
