added critical css

--- a/src/templates/pages/country-states.pug
+++ b/src/templates/pages/country-states.pug
@@ -14,8 +14,8 @@ html(lang="en")
         link(rel="stylesheet", href="assets/_css/app.css" media="print" onload="this.onload=null;this.removeAttribute('media');")
         //- link(rel="stylesheet", href="assets/css/app.min.css" media="print" onload="this.onload=null;this.removeAttribute('media');")
         noscript
-            link(rel="stylesheet", href="assets/_css/app.css")
-            //- link(rel="stylesheet", href="assets/css/app.min.css")
+            //- link(rel="stylesheet", href="assets/_css/app.css")
+            link(rel="stylesheet", href="assets/css/app.min.css")
         title Dashboard
     body
         .dashboard.leaders-state.bg-light 
