--- a/src/templates/pages/addUser.pug
+++ b/src/templates/pages/addUser.pug
@@ -19,8 +19,8 @@ html(lang="en")
         link(rel="stylesheet", href="assets/_css/app.css" media="print" onload="this.onload=null;this.removeAttribute('media');")
         //- link(rel="stylesheet", href="assets/css/app.min.css" media="print" onload="this.onload=null;this.removeAttribute('media');")
         noscript
-            link(rel="stylesheet", href="assets/_css/app.css")
-            //- link(rel="stylesheet", href="assets/css/app.min.css")
+            //- link(rel="stylesheet", href="assets/_css/app.css")
+            link(rel="stylesheet", href="assets/css/app.min.css")
         title Dashboard
     body
         .dashboard.bg-light 
