--- a/src/templates/pages/countries-details.pug
+++ b/src/templates/pages/countries-details.pug
@@ -15,8 +15,8 @@ html(lang="en")
         link(rel="stylesheet", href="assets/_css/app.css" media="print" onload="this.onload=null;this.removeAttribute('media');")
         //- link(rel="stylesheet", href="assets/css/app.min.css" media="print" onload="this.onload=null;this.removeAttribute('media');")
         noscript
-            link(rel="stylesheet", href="assets/_css/app.css")
-            //- link(rel="stylesheet", href="assets/css/app.min.css")
+            //- link(rel="stylesheet", href="assets/_css/app.css")
+            link(rel="stylesheet", href="assets/css/app.min.css")
         title Countries Details 
     body
         .dashboard.bg-light 
