--- a/src/templates/pages/leader-images.pug
+++ b/src/templates/pages/leader-images.pug
@@ -16,8 +16,8 @@ html(lang="en")
         noscript
             link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap")
 
-        link(rel="stylesheet", href="assets/_css/app.css" media="print" onload="this.onload=null;this.removeAttribute('media');")
-        //- link(rel="stylesheet", href="assets/css/app.min.css" media="print" onload="this.onload=null;this.removeAttribute('media');")
+        //- link(rel="stylesheet", href="assets/_css/app.css" media="print" onload="this.onload=null;this.removeAttribute('media');")
+        link(rel="stylesheet", href="assets/css/app.min.css" media="print" onload="this.onload=null;this.removeAttribute('media');")
         noscript
             link(rel="stylesheet", href="assets/_css/app.css")
             //- link(rel="stylesheet", href="assets/css/app.min.css")
