--- a/src/sass/layout/_assignDesignation.scss
+++ b/src/sass/layout/_assignDesignation.scss
@@ -104,4 +104,7 @@
                 color: #ffe683;
             }
 
-            
+            .select2-container .select2-selection--single{
+                height: 49px;
+                border-radius: 8px;
+            }
