--- a/src/sass/layout/_roles.scss
+++ b/src/sass/layout/_roles.scss
@@ -1,3 +1,5 @@
+/* purgecss start ignore */ 
+
 .mofa-cms-content.designation.leader-images .recent-searches .search-box-wrapper
  {
     max-width: 1066px;
@@ -89,4 +91,5 @@
 .select2-container--default .select2-results__option--highlighted.select2-results__option--selectable{
     background-color:#926D92 !important;
     color: #fff !important;
-}
+    
+}/* purgecss end ignore */ 
