--- a/src/sass/layout/_layout.scss
+++ b/src/sass/layout/_layout.scss
@@ -1,3 +1,5 @@
+/* purgecss start ignore */
+
 .dashboard{
    
 
@@ -521,3 +523,5 @@
         grid-template-columns: 60px auto;
     }
 }
+
+/* purgecss end ignore */
