--- a/src/sass/modules/_confidenceScore-range.scss
+++ b/src/sass/modules/_confidenceScore-range.scss
@@ -55,4 +55,8 @@
     }
 }
 
+.lineChart-select ~ .select2{
+    width:155px !important;
+}
+
 /*--------------confidence score css end --------------*/
