--- a/src/templates/partials/_header.pug
+++ b/src/templates/partials/_header.pug
@@ -273,7 +273,7 @@ header.bg-white
                                                 li
                                                     a.dropdown-item.mark-as-read(href='#' data-id='66935') Mark as read
                     .view-all-notifications.position-sticky.bottom-0.bg-white 
-                        a.d-block.text-center(href="/Notification/index")
+                        a.d-block.text-center(href="./notifications.html")
                             | View all 
         .admin.d-none.d-sm-flex 
             img(src="assets/images/admin-user.png", alt="", srcset="")
